Salary Module done
Salary completed

--- a/DensNDente Warehouse Management/DensNDente Warehouse Management/Web.config
+++ b/DensNDente Warehouse Management/DensNDente Warehouse Management/Web.config
@@ -16,8 +16,8 @@
     </compilation>
   </system.web>
   <connectionStrings>
-    <add name="DensDBEntities" connectionString="metadata=res://*/EntityFramework.DensModel.csdl|res://*/EntityFramework.DensModel.ssdl|res://*/EntityFramework.DensModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DensDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DensDBConnectionString" connectionString="Data Source=localhost;Initial Catalog=DensDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DensDBEntities" connectionString="metadata=res://*/EntityFramework.DensModel.csdl|res://*/EntityFramework.DensModel.ssdl|res://*/EntityFramework.DensModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAYA-PC\MAYA;initial catalog=DensDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DensDBConnectionString" connectionString="Data Source=MAYA-PC\MAYA;Initial Catalog=DensDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
