--- a/DensNDente Warehouse Management/DensNDente Warehouse Management/DensNDente Warehouse Management.csproj
+++ b/DensNDente Warehouse Management/DensNDente Warehouse Management/DensNDente Warehouse Management.csproj
@@ -72,7 +72,9 @@
     <Content Include="Style\Login.css" />
     <Content Include="Style\MainStyle.css" />
     <Content Include="Style\Menu.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="main.aspx" />
     <Content Include="Pages\bin.aspx" />
     <Content Include="Pages\role.aspx" />
